<resources>
    <string name="app_name">Autopro App</string>
    <string name="search">Cari Barang</string>
    <string name="title_home">Home</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="search_hint">Cari Barang</string>
    <string name="product_name">AUTOPRO</string>
    <string name="auto_service">Auto Service</string>
    <string name="emergency">Emergency</string>
    <string name="auto_order">Auto Order</string>
    <string name="auto_cleaning">Auto Cleaning</string>
    <string name="tahun_kendaraan">Tahun Kendaraan</string>
    <string name="nomor_kendaraan">Nomor Kendaraan</string>
    <string name="merk_mobil">Merk Mobil</string>
    <string name="address">Address</string>
    <string name="menu_service">Menu Service</string>
    <string name="consultant_service">Consultant Service</string>
    <string name="waktu_lokasi_pemesanan"><![CDATA[Waktu & Lokasi Pemesanan]]></string>
    <string name="add_detail">Tambah Keterangan</string>
    <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="notes">Catatan</string>
    <string name="tune_up">Tune Up</string>
    <string name="total">Total</string>
    <string name="understand">Saya Mengerti</string>
    <string name="payment">Payment</string>
    <string name="total_payment">Total Tagihan</string>
    <string name="payment_method">Payment Method</string>
    <string name="ovo">OVO</string>
    <string name="credit_card">Kartu Kredit</string>
    <string name="booking_code">Kode Booking</string>
    <string name="submit">Submit</string>
    <string name="cuci_exterior">Cuci Exterior</string>
    <string name="cuci_exterior_interior">Cuci Exterior Interior</string>
    <string name="cuci_dan_wax">Cuci dan Wax</string>
    <string name="derek_mobil">Derek Mobil</string>
    <string name="phone_number_atau_email">Phone Number atau Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="please_fill_the_detail_below">Please Fill the Detail Below</string>
    <string name="your_profile">Your Profile</string>
    <string name="feedback">Feedback</string>
    <string name="activity">Activity</string>
</resources>
